--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     background-color: rgb(223, 220, 216);
+    transition: 6s;
 }
 .container{
     display: flex;
@@ -28,7 +29,7 @@ body{
 .pictureimage{
     width: 400px;
     height: 100vh;
-    background-image: url(/suit\ image\ 2.jpg);
+    background-image: url(suit\ image\ 2.jpg);
     background-repeat: no-repeat;
     background-size: contain;
 }
