--- a/style2.css
+++ b/style2.css
@@ -1,5 +1,6 @@
 body{
     background-color: whitesmoke;
+    transition: 5s;
 }
 .container{
     width: 800px;
@@ -33,7 +34,7 @@ body{
     width: 200px;
     height: 400px;
     border-radius: 0px 30px 30px 0px;
-    background-color: rgb(232, 222, 206)
+    background-color: rgb(232, 222, 206);
 }
 .sid img{
     width: 220px;
@@ -59,7 +60,7 @@ body{
 }
 .side h3{
     color: rgb(158, 132, 96);
-   line-height: 50px;
+   line-height: 40px;
    font-family: 'Dancing Script', cursive;
    margin: auto 40px;
    
